<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="22dp"
        android:layout_gravity="center"
        android:src="@drawable/carbon_wifi_off"
        app:tint="@color/mainColor" />

    <TextView

        android:fontFamily="@font/pro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#AB000000"
        android:textSize="18sp"
        android:text="@string/trang_thai_mang"
        android:gravity="center"/>
    <TextView

        android:fontFamily="@font/pro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#AB000000"
        android:textSize="18sp"
        android:text="@string/kiem_tra"
        android:gravity="center"/>
     <androidx.appcompat.widget.AppCompatButton
         android:textColor="@color/white"
         android:fontFamily="@font/pro_text"
         android:background="@drawable/shape_btn_login1"
         android:id="@+id/btnRetry"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="16sp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="21dp"
         android:layout_marginBottom="29dp"
         android:textAllCaps="true"
         android:text="@string/cancel"
         />
</LinearLayout>