<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="temp"
            type="com.example.appbookroom.view.BookRoomActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.BookRoomActivity"
            tools:viewBindingIgnore="true">

            <ImageView
                android:id="@+id/imgBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/rectangle_3124"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/vector_1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/nameRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="3dp"
                android:fontFamily="@font/pro_text"
                android:text="@string/ten_phong"
                android:textColor="#FFFFFF"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@id/imgBackground"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/numberPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:fontFamily="@font/pro_text_regular"
                android:text="@string/so_nguoi"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/imgBackground"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="147dp"
                android:progress="25"
                android:progressDrawable="@drawable/shape_progessbar"
                android:rotation="-90"
                android:scaleY="-1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgBack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pro_text_regular"
                android:text="8"
                android:textColor="#44494D"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/progressBar1"
                app:layout_constraintLeft_toLeftOf="@id/progressBar1"
                app:layout_constraintRight_toRightOf="@id/progressBar1"
                app:layout_constraintTop_toTopOf="@id/progressBar1"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
               android:backgroundTint="@color/mainColor"
                android:id="@+id/edTieuDe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="49dp"
                android:layout_marginTop="175dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/pro_text"
                android:hint="@string/nhap_tieu_de"
                android:maxLines="1"
                android:textColor="@color/neutracolor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgBack"
                android:textColorHint="@color/neutracolor" />

            <ImageView
                android:id="@+id/imgClock"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="72dp"
                android:src="@drawable/clock"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tvDate"
                app:layout_constraintTop_toBottomOf="@+id/progressBar1" />
            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/pro_text"
                android:text="10:15 - 11:00"
                android:textColor="#44494D"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDate" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="11dp"
                android:fontFamily="@font/pro_text_regular"
                android:text="Jun 04, 2021"
                android:textColor="#44494D"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@id/imgClock"
                app:layout_constraintTop_toBottomOf="@+id/progressBar1" />

            <ImageView
                android:id="@+id/imgLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTime" />

            <ImageView
                android:id="@+id/imgPeople"
                android:layout_width="13dp"
                android:layout_height="18sp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/group_10"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLine" />
            <TextView
                android:fontFamily="@font/pro_text_regular"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 người"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@id/imgLine"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/imgPeople"
                android:textColor="@color/neutracolor"/>

            <ImageView
                android:id="@+id/imgPeople1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_img_people"
                android:src="@drawable/rectangle_3173"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/imgPeople2"
                app:layout_constraintTop_toBottomOf="@id/imgPeople"/>
            <ImageView
                android:background="@drawable/shape_img_people"
                android:id="@+id/imgPeople2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/rectangle_3174"
                app:layout_constraintLeft_toRightOf="@id/imgPeople1"
                app:layout_constraintTop_toBottomOf="@id/imgPeople" />
            <ImageView
                android:background="@drawable/shape_img_people"
                android:id="@+id/imgPeople3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/rectangle_3175"
                app:layout_constraintLeft_toRightOf="@id/imgPeople2"
                app:layout_constraintTop_toBottomOf="@id/imgPeople" />

            <ImageView
                android:background="@drawable/shape_img_people"
                android:id="@+id/imgInsert"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/group_8855"
                app:layout_constraintLeft_toRightOf="@id/imgPeople3"
                app:layout_constraintTop_toBottomOf="@id/imgPeople" />

            <ImageView
                android:id="@+id/imgLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/line"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgInsert" />

            <ImageView
                android:id="@+id/imgCHiTiet"
                android:layout_width="18dp"
                android:layout_height="20dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="46dp"
                android:src="@drawable/group"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/edMota"
                app:layout_constraintTop_toBottomOf="@id/imgLine2" />

            <EditText
                android:textSize="14sp"
                android:fontFamily="@font/pro_text_regular"
                android:id="@+id/edMota"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_btn_email_pass"
                android:hint="Nhập mô tả"
                android:paddingLeft="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLine2"
                android:textColor="@color/neutracolor"
                android:textColorHint="@color/neutracolor"/>

            <Button
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/pro_text_semibold"
                android:id="@+id/btnBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="22sp"
                android:layout_marginRight="14dp"
                android:background="@drawable/shape_btn_login1"
                android:text="@string/btn_dat_phong"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edMota" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
